--- a/footer.html
+++ b/footer.html
@@ -7,7 +7,7 @@
 	 <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.1/css/font-awesome.min.css">
   <link rel="stylesheet" type="text/css" href="style.css">
-   <meta charset="utf-8"> 
+   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
@@ -23,6 +23,10 @@
         </li>
       </ul>
     </div>
+
+		<div>
+
+		</div>
 
     <div class="col-sm-8 text-center">
       <ul class="footer-navigation">
@@ -50,7 +54,7 @@
           </td>
         </tr>
       </table>
-    
+
     </div>
 
   </div>
